add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(sigslot)
add_subdirectory(string)
add_subdirectory(glisp)
add_subdirectory(tokenizer)
add_subdirectory(framework_base)
add_subdirectory(random)
add_subdirectory(hwinfo)
add_subdirectory(scheduler)
add_subdirectory(file_watch)
add_subdirectory(rosemary)
